--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "class-methods-use-this": [0],
     "no-underscore-dangle": [0],
     "no-unused-vars": [0],
+    "no-unused-expressions": [0],
     "no-param-reassign": [0],
     "semi": [0],
     "consistent-return": [0],
